test/integration/error/err_03_array_index_abuse.pl0
program indexAbuse;
var arr[10], b[10];
begin
  arr[b] := 1; { Error: b is array, not scalar }
end